@@ -18,74 +18,57 @@
 
 package org.apache.cassandra.sidecar.configmanagement;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 
 import org.junit.jupiter.api.Test;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.databind.node.IntNode;
-import com.fasterxml.jackson.databind.node.ObjectNode;
+import io.vertx.core.json.JsonObject;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 /**
  * Tests for {@link CassandraConfigurationOverlay}
  */
 class CassandraConfigurationOverlayTest
 {
-    private static final ObjectMapper MAPPER = new ObjectMapper();
-
-    @Test
-    void testRejectsNonObjectCassandraYaml()
-    {
-        ArrayNode array = MAPPER.createArrayNode().add("not_an_object");
-
-        assertThatThrownBy(() -> new CassandraConfigurationOverlay(array, null))
-            .isInstanceOf(IllegalArgumentException.class)
-            .hasMessageContaining("must be a JSON object");
-    }
-
     @Test
     void testUpdatedAppliesCassandraYamlChanges()
     {
-        ObjectNode yaml = MAPPER.createObjectNode();
-        yaml.put("concurrent_reads", 32);
-        yaml.put("memtable_flush_writers", 4);
-        yaml.put("storage_compatibility_mode", "CASSANDRA_4");
+        JsonObject yaml = new JsonObject()
+                          .put("concurrent_reads", 32)
+                          .put("memtable_flush_writers", 4)
+                          .put("storage_compatibility_mode", "CASSANDRA_4");
         CassandraConfigurationOverlay overlay = new CassandraConfigurationOverlay(yaml, null);
 
-        Map<String, JsonNode> updates = new LinkedHashMap<>();
-        updates.put("concurrent_reads", IntNode.valueOf(64));
+        Map<String, Object> updates = new LinkedHashMap<>();
+        updates.put("concurrent_reads", 64);
         updates.put("storage_compatibility_mode", null);
 
         CassandraConfigurationOverlay updated = overlay.updated(updates, null, null);
 
         // concurrent_reads updated
-        assertThat(updated.cassandraYaml().get("concurrent_reads").asInt()).isEqualTo(64);
+        assertThat(updated.cassandraYaml().getInteger("concurrent_reads")).isEqualTo(64);
         // storage_compatibility_mode removed
-        assertThat(updated.cassandraYaml().has("storage_compatibility_mode")).isFalse();
+        assertThat(updated.cassandraYaml().containsKey("storage_compatibility_mode")).isFalse();
         // memtable_flush_writers preserved
-        assertThat(updated.cassandraYaml().get("memtable_flush_writers").asInt()).isEqualTo(4);
+        assertThat(updated.cassandraYaml().getInteger("memtable_flush_writers")).isEqualTo(4);
     }
 
     @Test
     void testUpdatedAddsAndRemovesJvmOpts()
     {
-        CassandraConfigurationOverlay overlay = new CassandraConfigurationOverlay(null, Arrays.asList(
+        CassandraConfigurationOverlay overlay = new CassandraConfigurationOverlay(null, List.of(
             "-Dcassandra.available_processors=8",
             "-Xmx4G"
         ));
 
         CassandraConfigurationOverlay updated = overlay.updated(
             null,
-            Arrays.asList("-Xmx8G"),
-            Arrays.asList("-Xmx4G"));
+            List.of("-Xmx8G"),
+            List.of("-Xmx4G"));
 
         assertThat(updated.extraJvmOpts()).containsExactly(
             "-Dcassandra.available_processors=8",
@@ -95,39 +78,37 @@ class CassandraConfigurationOverlayTest
     @Test
     void testConstructorDeepCopiesCassandraYaml()
     {
-        ObjectNode yaml = MAPPER.createObjectNode();
-        yaml.put("concurrent_reads", 32);
+        JsonObject yaml = new JsonObject().put("concurrent_reads", 32);
         CassandraConfigurationOverlay overlay = new CassandraConfigurationOverlay(yaml, null);
 
         yaml.put("concurrent_reads", 64);
 
-        assertThat(overlay.cassandraYaml().get("concurrent_reads").asInt()).isEqualTo(32);
+        assertThat(overlay.cassandraYaml().getInteger("concurrent_reads")).isEqualTo(32);
     }
 
     @Test
     void testUpdatedReturnsNewInstance()
     {
-        ObjectNode yaml = MAPPER.createObjectNode();
-        yaml.put("concurrent_reads", 32);
-        CassandraConfigurationOverlay overlay = new CassandraConfigurationOverlay(yaml, Arrays.asList("-Xmx4G"));
+        JsonObject yaml = new JsonObject().put("concurrent_reads", 32);
+        CassandraConfigurationOverlay overlay = new CassandraConfigurationOverlay(yaml, List.of("-Xmx4G"));
 
         CassandraConfigurationOverlay updated = overlay.updated(
-            Collections.singletonMap("concurrent_reads", IntNode.valueOf(64)),
+            Collections.singletonMap("concurrent_reads", 64),
             null, null);
 
         assertThat(updated).isNotSameAs(overlay);
-        assertThat(updated.cassandraYaml().get("concurrent_reads").asInt()).isEqualTo(64);
-        // Original is not modified by updated() — deepCopy used internally
-        assertThat(overlay.cassandraYaml().get("concurrent_reads").asInt()).isEqualTo(32);
+        assertThat(updated.cassandraYaml().getInteger("concurrent_reads")).isEqualTo(64);
+        // Original is not modified by updated() — deep copy used internally
+        assertThat(overlay.cassandraYaml().getInteger("concurrent_reads")).isEqualTo(32);
     }
 
     @Test
     void testToString()
     {
-        ObjectNode yaml = MAPPER.createObjectNode();
-        yaml.put("concurrent_reads", 32);
-        yaml.put("commitlog_sync", "periodic");
-        CassandraConfigurationOverlay overlay = new CassandraConfigurationOverlay(yaml, Arrays.asList("-Xmx4G"));
+        JsonObject yaml = new JsonObject()
+                          .put("concurrent_reads", 32)
+                          .put("commitlog_sync", "periodic");
+        CassandraConfigurationOverlay overlay = new CassandraConfigurationOverlay(yaml, List.of("-Xmx4G"));
 
         assertThat(overlay.toString()).isEqualTo(String.join("\n",
             "{",
